* Rewrite anchor tags in textareas when in preview mode to use local browser
* Restrict Image Magnifier selection to jpg images
* Fix position of iDevice edit button in preview mode
* Fix Multi-Select iDevice icon
* Fix Reading Activity display after changing language preference
* Fix alignment of attachment iDevice in edit mode
* Fix Case Study image size
* Fix SCORM Quiz icon export
* Add Hungarian Wikipedia
* Add Quit button to iDevice editor
* Add [idevices] section to exe.conf to prevent some from showing in list
* Improve version check for ready2run deletion/extraction
* Improve check for a copy of eXe server already running on launch
* Updated translations and added Hungarian and Ukranian
* Update to Python 2.5.1
* Update to BeautifulSoup 2.1.1 for wiki parsing

Version 0.23 (r2729)
* Change FLV player to FlowPlayer
* Move Refresh menu button to a Tools menu item
* Add links to online manual, tips and tricks, and release notes to Help menu
* Add iPod Notes format export
* Add Wikiversity
* Add "Clear Recent Projects" menu item
* Add check for existing eXe server when starting new one
* Allow translations for some Javascript message strings
* Fix Styles menu to display capitalized, alphabetized list
* Fix Styles menu to accept normal click-select-release
* Disable Nevow timeout exceptions that could be triggered by Firefox dialogs
* Update to TinyMCE 2.1.0

Version 0.22 (r2674)
* Add File... Print to print an entire course (same as export singlepage)
* Add attachment icon in preview mode
* Add Slate style
* Add help tips for multi-select iDevice
* Don't add unneeded large files to SCORM exports
* Fix maintaining language preference across starts
* Fix Merge Import and Extract
* Fix maths iDevice input file descriptor on Windows
* Fix uploads of non-ASCII filenames
* Fix line endings in text exports
* Fix file copying in applet iDevice
* Fix &raquo; in web export
* Changing to another node does not mark package as needing saving
* Updated translations