@@ -459,10 +459,12 @@ these in a gallery context rather then individually.</p>"""),
                             '  images = %s;' % [img.imageSrc.encode('utf-8') for img in self.images],
                             '  titles = %s;' % [img.caption.encode('utf-8') for img in self.images],
                             '  imageIdx = 0;',
-                            '  if (window.location.href.search(/=(d+)$/) >= 0) {',
+                            '  var p = window.location.href.search(/=(\d+)$/);',
+                            '  if (p >= 0) {',
                             '    imageIdx = parseInt(window.location.href.substr(p+1));',
                             '    if ((imageIdx < 0) || (imageIdx > (images.length - 1))) { imageIdx = 0; }',
                             '  }',
+                            '  imgObj.src = images[imageIdx];',
                             '',
                             '// set thumbnail size for current image',
                             'function getShrinkMod() {',
@@ -528,7 +530,7 @@ these in a gallery context rather then individually.</p>"""),
                             '    imgObj = new Image();',
                             '    imgObj.src = images[imageIdx];',
                             '    getShrinkMod();',
-                            '    if (imageExpanded) toggleZoom();',
+                            '    toggleZoom();',
                             '    // Update title',
                             '    var title = document.getElementById("nodeTitle");',
                             '    title.innerHTML = titles[imageIdx];',
